# cphot

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  README.md  _r_e_a_d_m_e_8md.html  allocators_8h.html  allocators_8h_source.html  annotated.html  annotated_dup.js  biginteger_8h.html  biginteger_8h_source.html  blackbody_8hpp.html  blackbody_8hpp.js  blackbody_8hpp_source.html  class_auto_u_t_f_input_stream-members.html  class_auto_u_t_f_input_stream.html  class_auto_u_t_f_input_stream.js  class_auto_u_t_f_output_stream-members.html  class_auto_u_t_f_output_stream.html  class_auto_u_t_f_output_stream.js  class_basic_i_stream_wrapper-members.html  class_basic_i_stream_wrapper.html  class_basic_i_stream_wrapper.js  class_basic_o_stream_wrapper-members.html  class_basic_o_stream_wrapper.html  class_basic_o_stream_wrapper.js  class_crt_allocator-members.html  class_crt_allocator.html  class_crt_allocator.js  class_encoded_input_stream-members.html  class_encoded_input_stream.html  class_encoded_input_stream.js  class_encoded_input_stream_3_01_u_t_f8_3_4_00_01_memory_stream_01_4-members.html  class_encoded_input_stream_3_01_u_t_f8_3_4_00_01_memory_stream_01_4.html  class_encoded_input_stream_3_01_u_t_f8_3_4_00_01_memory_stream_01_4.js  class_encoded_output_stream-members.html  class_encoded_output_stream.html  class_encoded_output_stream.js  class_file_read_stream-members.html  (+767 more)
.github/workflows/: workflow.yml
docs/: Doxyfile.in  README.md  cphot.md  cphot_photdetails.md  cpp_template.md  header.html  libcontent.md
include/: blackbody.hpp  helpers.hpp  prettyprint.hpp  rapidcsv.hpp
include/cphot/: filter.hpp  io.hpp  library.hpp  licks.hpp  rquantities.hpp  sun.hpp  vega.hpp  votable.hpp
include/cphot/hardcoded_data/: licks_data.hpp  sun_data.hpp  vega.votable  vega_data.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+137 more)
src/: cphot_dev.cpp  hdf5test.cpp  main.cpp
tests/: test_cphot.cpp  test_main.cpp  testlib.hpp
